...
        (loc) => loc.scanRecBlbAvoidNitrogen,
        (loc) => loc.scanRecBlbUseResistantVarieties,
        (loc) => loc.scanAdviceAlertTechnician,
      ],
    ),
    DiseaseInfo(
      label: 'Brown spot',
      ficheId: 'helminthosporiose',
      name: (loc) => loc.diseaseBrownSpot,
      scientificName: 'Bipolaris oryzae',
      description: (loc) => loc.guideDisease2Desc,
      symptoms: (loc) => loc.guideDisease2Symptoms,
      causes: (loc) => loc.guideDisease2Causes,
...
