...
  @override
  Widget build(BuildContext context, WidgetRef ref) {
    final router = ref.watch(routerProvider);
    final locale = ref.watch(localeProvider);

    return MaterialApp.router(
      title: 'AgriMada',
      theme: AppTheme.light,
      locale: locale,
      supportedLocales: const [
        Locale('fr'),
        Locale('mg'),
      ],
...
